...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/AuthResetEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:hint="Tommy Trojan"
                    android:inputType="textEmailAddress"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/AuthCreateInstagram"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:hint="uscedu"
                    android:imeOptions="actionDone"
...
                android:divider="@drawable/divider_horizontal"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle">

                <com.google.android.material.chip.Chip
                    android:id="@+id/EditProfileMale"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    app:checkedIconVisible="false"
...

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/ListingCreateSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.5"
            android:backgroundTint="@color/accent"
            android:enabled="false"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <EditText
                    android:id="@+id/AuthCreateEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:hint="tommy@usc.edu"
                    android:inputType="textEmailAddress"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/AuthEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:hint="********"
                    android:inputType="textPassword"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <EditText
                    android:id="@+id/AuthCreatePasswordConfirm"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:hint="********"
                    android:inputType="textPassword"
...
                    app:srcCompat="@drawable/ic_baseline_forbidden_24"
                    app:tint="@color/accent_secondary" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <Button
            android:id="@+id/AuthSubmit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.5"
            android:backgroundTint="@color/accent"
            android:enabled="false"
...

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/EditProfileAlcoholicOld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:text="Alcoholic"
                    app:checkedIconVisible="false"
...
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_color_list"
                    app:chipIcon="@drawable/ic_baseline_sports_kabaddi_24"
                    app:chipSurfaceColor="@color/text_secondary" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/EditProfileNightOwl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:text="Night Owl"
                    app:checkedIconVisible="false"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/AuthCreateBio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="I like playing Minecraft."
...
                    app:tint="@color/accent_secondary" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/AuthSubmit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.5"
            android:backgroundTint="@color/accent"
            android:enabled="false"
...
