...
                android:layout_height="match_parent"
                android:paddingTop="25sp"
                android:paddingBottom="10sp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/EditProfileName"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:paddingStart="50sp"
                    android:paddingTop="25sp"
...
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="10sp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/Biography"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background_light"
                    android:ems="10"
                    android:gravity="start"
                    android:imeOptions="actionDone"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/EditProfileSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="EditProfile"
                    android:text="EDIT PROFILE"
                    android:textColor="@color/background"
                    app:chipBackgroundColor="@color/accent_tertiary"
...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/AuthLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/accent"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
...
        app:chipStartPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="@+id/InboxTab"
        app:textEndPadding="8dp" />

    <ImageButton
        android:id="@+id/ProfileTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="30sp"
...
