...
        app:layout_constraintStart_toEndOf="@id/AuthEmail"
        app:layout_constraintStart_toStartOf="@+id/AuthEmail"
        app:layout_constraintTop_toTopOf="@+id/AuthEmail"
        app:srcCompat="@drawable/ic_outline_email_24" />

    <EditText
        android:id="@+id/AuthPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_background_light"
        android:ems="10"
        android:hint="**********"
...
        android:text="Don't have an account?"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AuthSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="Sign up"
...
