...
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20sp">

                        <EditText
                            android:id="@+id/ListingDescription"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_background_light"
                            android:ems="10"
                            android:gravity="start"
                            android:hint="I want to join you. (Maximum 100 characters)"
...
